Fixed playspace bug

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.ide.vscode": "1.1.4",
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.ugui": "1.0.0",
+    "com.unity.xr.oculus.android": "2.38.6",
     "com.unity.xr.oculus.standalone": "2.38.4",
     "com.unity.xr.openvr.standalone": "2.0.5",
     "com.unity.xr.windowsmr.metro": "4.2.1",
